Fix build after r138351 https://bugs.webkit.org/show_bug.cgi?id=138401

Ureviewed. Make return type match.

* platform/ios/WebCoreSystemInterfaceIOS.mm:

Canonical link: https://commits.webkit.org/156221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175600 268f45cc-cd09-0410-ab3c-d52691b4dbfc